[gd_scene load_steps=3 format=3 uid="uid://ddimem50csu6i"]

[ext_resource type="Script" path="res://side_bar.gd" id="1_knxtx"]
[ext_resource type="Texture2D" uid="uid://cvhrtergt2y0v" path="res://assets/sidebar.png" id="2_yxr36"]

[node name="SideBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_knxtx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-96, 256)
texture = ExtResource("2_yxr36")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 280.0
offset_bottom = 96.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Order" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Order"

[node name="Eat" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Eat"

[node name="Shop" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Shop"

[connection signal="button_up" from="VBoxContainer/HBoxContainer/Order" to="." method="_on_order_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Eat" to="." method="_on_eat_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Shop" to="." method="_on_shop_button_up"]
